--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 0 test!</title>
+    <title>Assignment 1</title>
   </head>
   <body>
-    <div>
+    <div class="background-color:red">
       <h1>Welcome to my Assignment1 for COMP 426</h1>
-      <p><strong>I will be describing a mythological creature.</strong></p>
+      <p><strong>I will be describing the Japanese mythological creature, Oni.</strong></p>
+    </div>
+    <img src="oni.jpg" alt="Oni">
+    <div> 
+      <p>Oni are demons from Japanese mythology. They often can be portrayed with horns growing out of their heads. <br> They are usually red, blue, or white and tend to have ogre/troll like features. </p>
     </div>
     <h4><a href="page2.html">Origin</a></h1>
       <h4><a href="page3.html">Powers</a></h1>
