--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 0 test!</title>
@@ -14,8 +15,9 @@
         >
       </p>
     </div>
+    <h4><a href="index.html">About</a></h1>
     <h4><a href="page2.html">Origin</a></h1>
     <h4><a href="page3.html">Powers</a></h1>
-    <h4><a href="index.html">Home</a></h1>
+    <h4><a href="page4.html">Modern Interpretation</a></h1>
   </body>
 </html>
