--- a/page3.html
+++ b/page3.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 0 test!</title>
+    <title>Assignment 1</title>
   </head>
   <body>
     <div>
@@ -14,8 +15,8 @@
         >
       </p>
     </div>
+    <h4><a href="index.html">About</a></h1>
     <h4><a href="page2.html">Origin</a></h1>
-    <h4><a href="page3.html">Powers</a></h1>
-    <h4><a href="index.html">Home</a></h1>
+    <h4><a href="page4.html">Modern Interpretation</a></h1>
   </body>
 </html>
