--- a/page4.html
+++ b/page4.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 0 test!</title>
+    <title>Assignment 1</title>
   </head>
   <body>
     <div>
       <h1>Modern Interpretation</h1>
-      <p>
+      <p> 
         <strong
           >I will be describing the mythological demons, Oni.</strong
         >
       </p>
     </div>
+    <h4><a href="index.html">Home</a></h1>
     <h4><a href="page2.html">Origin</a></h1>
     <h4><a href="page3.html">Powers</a></h1>
-    <h4><a href="index.html">Home</a></h1>
+
   </body>
 </html>
