--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css"> </link>
-    <meta charset="UTF-8"> </meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
   </head>
   <body>
@@ -18,12 +18,12 @@
     <div>
       <img
         src="oni.jpg"
-        alt="https://commons.wikimedia.org/wiki/File:Hepburn(1886)kobutori-p006%267-man%26oni.jpg"></img> </div>
+        alt="https://commons.wikimedia.org/wiki/File:Hepburn(1886)kobutori-p006%267-man%26oni.jpg">
     </div>
     <div>
       <p>
         Oni are demons from Japanese mythology. They often can be portrayed with
-        horns growing out of their heads. <br></br>
+        horns growing out of their heads. <br>
         They are usually red, blue, or white and tend to have ogre/troll like
         features.
       </p>
