--- a/page2.html
+++ b/page2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 0 test!</title>
   </head>
   <body>
@@ -14,10 +14,10 @@
       </p>
       <p>
         Oni originates from the word "on" which means to "hide or conceal". Oni
-        are able to hide and conceal themselves from most things. <br />
+        are able to hide and conceal themselves from most things. <br>
         Oni during the 10th century had a different meaning than they used to.
         The most wicked of individuals on Earth, transform into Oni when they
-        die. <br />
+        die. <br>
         If you are even worse, then you turn into an Oni before you die which is
         where folktales of Oni come from.
       </p>
