--- a/page3.html
+++ b/page3.html
@@ -14,8 +14,8 @@
       </p>
       <p class="powers">
         Oni are very skilled at hiding and are able to disguise themselves quite
-        easily. <br />
-        They usually have the power of invisibility. <br />
+        easily. <br>
+        They usually have the power of invisibility. <br>
         Oni often have telepathy. Sometimes, Oni are also capable of eating
         humans.
       </p>
