final push i think

--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h1>Origin</h1>
+      <h1 class="page2">Origin</h1>
       <p>
         <strong>Origin of Oni</strong>
       </p>
