--- a/page3.html
+++ b/page3.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
   </head>
   <body>
     <div>
-      <h1>Powers</h1>
+      <h1 class="page3">Powers</h1>
       <p>
         <strong> Oni Powers</strong>
       </p>
