--- a/page4.html
+++ b/page4.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h1>Modern Interpretation and Depiction</h1>
+      <h1 class="page4">Modern Interpretation and Depiction</h1>
       <p>
         <strong
           >Oni have been characters/references in many modern shows/games
